--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -67,7 +67,7 @@
     "university_calendar_title": "التقويم الجامعي",
   
     "profile_button_editProfile": "تعديل الملف الشخصي",
-    "profile_button_information": "المعلومات",
+    "profile_button_information": "سياسة الخصوصية",
     "profile_button_settings": "الإعدادات",
     "profile_button_logout": "تسجيل الخروج",
   
