--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -66,7 +66,7 @@
 "university_calendar_title":"Calendar",
 
 "profile_button_editProfile":"Edit Profile",
-"profile_button_information":"Information",
+"profile_button_information":"Privacy Policy",
 "profile_button_settings":"Settings",
 "profile_button_logout":"Log out",
 
