--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,6 +1,6 @@
 {
-"splash_text":"Every moment you invest in studying brings you one step closer to realizing your academic dreams",
-"splash_title":"Your Path",
+"splash_text":"sophisticated space for vibrant campus living and academic excellence.",
+"splash_title":"CAMPUS",
 "splash_button":"Continue",
 
 "login_title":"Welcome Back",
